tests/baselines/reference/symbolType20.errors.txt
symbolType20.ts(1,11): error TS2427: Interface name cannot be 'symbol'.


==== symbolType20.ts (1 errors) ====
    interface symbol { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'symbol'.